Fixing screens not scrolling fully on iPhone

--- a/assets/sass/bar_base.scss
+++ b/assets/sass/bar_base.scss
@@ -62,4 +62,5 @@
 	margin:auto;
 	margin-bottom: 100px;
 	margin-top: 50px;
+	-webkit-overflow-scrolling : touch;
 }
