--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -5,12 +5,10 @@
 html {
     overflow: -moz-scrollbars-vertical;
     overflow-x: hidden;
-    height: 100vh;
 
     body {
         -webkit-font-smoothing: antialiased;
         -webkit-text-size-adjust: none;
-        height: 100vh;
         margin: 0px;
     }
 }
